Upgrade to OTRS 3.0

--- a/CustomerTicketClose/Makefile
+++ b/CustomerTicketClose/Makefile
@@ -1,12 +1,2 @@
-all: install
-	/opt/otrs2/bin/opm.pl -a build -p customer_ticket_close.sopm
-	mv /tmp/CustomerTicketClose*.opm .
-
-install:
-	cp Kernel/Modules/CustomerTicketClose.pm \
-	   /opt/otrs2/Kernel/Modules/
-	cp Kernel/Output/HTML/Standard/*.dtl \
-	   /opt/otrs2/Kernel/Output/HTML/Standard/
-	cp Kernel/Config/Files/*.xml \
-	   /opt/otrs2/Kernel/Config/Files
-
+all:
+	/opt/otrs3/bin/otrs.PackageManager.pl -a build -d ./ -p customer_ticket_close.sopm -o .
