cleanup for release

--- a/CustomerTicketClose/Makefile
+++ b/CustomerTicketClose/Makefile
@@ -1,2 +1,2 @@
 all:
-	/opt/otrs3/bin/otrs.PackageManager.pl -a build -d ./ -p customer_ticket_close.sopm -o .
+	/opt/otrs3/bin/otrs.PackageManager.pl -a build -d ./ -p *.sopm -o ..
