Change version number and Makefile

--- a/CustomerTicketClose/Makefile
+++ b/CustomerTicketClose/Makefile
@@ -1,2 +1,2 @@
 all:
-	/opt/otrs3/bin/otrs.PackageManager.pl -a build -d ./ -p *.sopm -o ..
+	/opt/otrs-dev/bin/otrs.PackageManager.pl -a build -d ./ -p *.sopm -o ..
